Fixed Teaser
Teaser ist nicht mehr Scrollbar

--- a/wp-content/themes/ws_13_14/scss/style.scss
+++ b/wp-content/themes/ws_13_14/scss/style.scss
@@ -426,8 +426,7 @@ Tags: werkschau, teaser
 }
 
 #teaser {
-	display: none;
-	position: absolute;
+	position: fixed;
 	top: 0;
 	right: 0;
 	width: 100%;
